# TG-bot

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  README_CN.md  ai_bot.py  docker-compose-auto.yml  docker-compose-full.yml  docker-compose-local.yml  docker-compose.yml  env.example  logger_config.py  pyproject.toml  user_data.example.json
app/: __init__.py  decorators.py
app/core/: __init__.py  bot_config.py  config.py  custom_apis.py  database.py  redis_client.py  security.py
app/handlers/: __init__.py  admin.py  common.py  custom_api.py  message.py  model.py  user.py
app/models/: __init__.py  schema.py
app/services/: __init__.py  ai_models.py  chat_service.py  user_custom_models.py  user_service.py
app/utils/: message_utils.py  model_utils.py  user_utils.py
